deploy: 655005bbb0599dbce0642c68607471cbd0f7c203

--- a/method_list.html
+++ b/method_list.html
@@ -1766,6 +1766,22 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="NetworkX/Graph.html#read_edgelist-class_method" title="NetworkX::Graph.read_edgelist (method)">read_edgelist</a></span>
+      <small>NetworkX::Graph</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="NetworkX/Graph.html#read_weighted_edgelist-class_method" title="NetworkX::Graph.read_weighted_edgelist (method)">read_weighted_edgelist</a></span>
+      <small>NetworkX::Graph</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="NetworkX.html#relabel-class_method" title="NetworkX.relabel (method)">relabel</a></span>
       <small>NetworkX</small>
     </div>
