deploy: b2e78beb53da5076ab11c65c1360cbf9243a2c54

--- a/method_list.html
+++ b/method_list.html
@@ -654,16 +654,16 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="NetworkX/Graph.html#dfs_nodes-instance_method" title="NetworkX::Graph#dfs_nodes (method)">#dfs_nodes</a></span>
-      <small>NetworkX::Graph</small>
+      <span class='object_link'><a href="NetworkX.html#dfs_predecessors-class_method" title="NetworkX.dfs_predecessors (method)">dfs_predecessors</a></span>
+      <small>NetworkX</small>
     </div>
   </li>
   
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="NetworkX.html#dfs_predecessors-class_method" title="NetworkX.dfs_predecessors (method)">dfs_predecessors</a></span>
-      <small>NetworkX</small>
+      <span class='object_link'><a href="NetworkX/Graph.html#dfs_preorder_nodes-instance_method" title="NetworkX::Graph#dfs_preorder_nodes (method)">#dfs_preorder_nodes</a></span>
+      <small>NetworkX::Graph</small>
     </div>
   </li>
   
@@ -822,7 +822,7 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="NetworkX/Graph.html#each_dfs_node-instance_method" title="NetworkX::Graph#each_dfs_node (method)">#each_dfs_node</a></span>
+      <span class='object_link'><a href="NetworkX/Graph.html#each_dfs_preorder_node-instance_method" title="NetworkX::Graph#each_dfs_preorder_node (method)">#each_dfs_preorder_node</a></span>
       <small>NetworkX::Graph</small>
     </div>
   </li>
