deploy: 8f6435e910dfc29196a6ed2b797b6e4f98edaf1d

--- a/method_list.html
+++ b/method_list.html
@@ -390,21 +390,29 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="NetworkX/Graph.html#bfs_edges-instance_method" title="NetworkX::Graph#bfs_edges (method)">#bfs_edges</a></span>
-      <small>NetworkX::Graph</small>
-    </div>
-  </li>
-  
-
-  <li class="odd ">
-    <div class="item">
       <span class='object_link'><a href="NetworkX.html#bfs_edges-class_method" title="NetworkX.bfs_edges (method)">bfs_edges</a></span>
       <small>NetworkX</small>
     </div>
   </li>
   
 
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="NetworkX/Graph.html#bfs_edges-instance_method" title="NetworkX::Graph#bfs_edges (method)">#bfs_edges</a></span>
+      <small>NetworkX::Graph</small>
+    </div>
+  </li>
+  
+
   <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="NetworkX/Graph.html#bfs_nodes-instance_method" title="NetworkX::Graph#bfs_nodes (method)">#bfs_nodes</a></span>
+      <small>NetworkX::Graph</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#bfs_predecessors-class_method" title="NetworkX.bfs_predecessors (method)">bfs_predecessors</a></span>
       <small>NetworkX</small>
@@ -412,7 +420,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#bfs_successors-class_method" title="NetworkX.bfs_successors (method)">bfs_successors</a></span>
       <small>NetworkX</small>
@@ -420,7 +428,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#bidirectional_bfs-class_method" title="NetworkX.bidirectional_bfs (method)">bidirectional_bfs</a></span>
       <small>NetworkX</small>
@@ -428,7 +436,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#bridges-class_method" title="NetworkX.bridges (method)">bridges</a></span>
       <small>NetworkX</small>
@@ -436,7 +444,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#build_flow_dict-class_method" title="NetworkX.build_flow_dict (method)">build_flow_dict</a></span>
       <small>NetworkX</small>
@@ -444,7 +452,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#build_residual_network-class_method" title="NetworkX.build_residual_network (method)">build_residual_network</a></span>
       <small>NetworkX</small>
@@ -452,7 +460,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#bull_graph-class_method" title="NetworkX::Graph.bull_graph (method)">bull_graph</a></span>
       <small>NetworkX::Graph</small>
@@ -460,7 +468,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#capacity_scaling-class_method" title="NetworkX.capacity_scaling (method)">capacity_scaling</a></span>
       <small>NetworkX</small>
@@ -468,7 +476,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#cartesian_product-class_method" title="NetworkX.cartesian_product (method)">cartesian_product</a></span>
       <small>NetworkX</small>
@@ -476,7 +484,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#circular_ladder_graph-class_method" title="NetworkX::Graph.circular_ladder_graph (method)">circular_ladder_graph</a></span>
       <small>NetworkX::Graph</small>
@@ -484,7 +492,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#clear-instance_method" title="NetworkX::Graph#clear (method)">#clear</a></span>
       <small>NetworkX::Graph</small>
@@ -492,7 +500,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/DiGraph.html#clear-instance_method" title="NetworkX::DiGraph#clear (method)">#clear</a></span>
       <small>NetworkX::DiGraph</small>
@@ -500,7 +508,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/GlobalRelabelThreshold.html#clear_work-instance_method" title="NetworkX::GlobalRelabelThreshold#clear_work (method)">#clear_work</a></span>
       <small>NetworkX::GlobalRelabelThreshold</small>
@@ -508,7 +516,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#closeness_vitality-class_method" title="NetworkX.closeness_vitality (method)">closeness_vitality</a></span>
       <small>NetworkX</small>
@@ -516,7 +524,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#complement-class_method" title="NetworkX.complement (method)">complement</a></span>
       <small>NetworkX</small>
@@ -524,7 +532,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#complete_edges-class_method" title="NetworkX::Graph.complete_edges (method)">complete_edges</a></span>
       <small>NetworkX::Graph</small>
@@ -532,7 +540,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#complete_graph-class_method" title="NetworkX::Graph.complete_graph (method)">complete_graph</a></span>
       <small>NetworkX::Graph</small>
@@ -540,7 +548,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#compose-class_method" title="NetworkX.compose (method)">compose</a></span>
       <small>NetworkX</small>
@@ -548,7 +556,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#compose_all-class_method" title="NetworkX.compose_all (method)">compose_all</a></span>
       <small>NetworkX</small>
@@ -556,7 +564,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/UnionFind.html#connected%3F-instance_method" title="NetworkX::UnionFind#connected? (method)">#connected?</a></span>
       <small>NetworkX::UnionFind</small>
@@ -564,7 +572,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#convert_to_distinct_labels-class_method" title="NetworkX.convert_to_distinct_labels (method)">convert_to_distinct_labels</a></span>
       <small>NetworkX</small>
@@ -572,7 +580,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#cubical_graph-class_method" title="NetworkX::Graph.cubical_graph (method)">cubical_graph</a></span>
       <small>NetworkX::Graph</small>
@@ -580,7 +588,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/CurrentEdge.html#curr-instance_method" title="NetworkX::CurrentEdge#curr (method)">#curr</a></span>
       <small>NetworkX::CurrentEdge</small>
@@ -588,7 +596,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#cycle%3F-class_method" title="NetworkX.cycle? (method)">cycle?</a></span>
       <small>NetworkX</small>
@@ -596,7 +604,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#cycle_basis-class_method" title="NetworkX.cycle_basis (method)">cycle_basis</a></span>
       <small>NetworkX</small>
@@ -604,7 +612,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#cycle_graph-class_method" title="NetworkX::Graph.cycle_graph (method)">cycle_graph</a></span>
       <small>NetworkX::Graph</small>
@@ -612,7 +620,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#degree-instance_method" title="NetworkX::Graph#degree (method)">#degree</a></span>
       <small>NetworkX::Graph</small>
@@ -620,7 +628,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#descendants-class_method" title="NetworkX.descendants (method)">descendants</a></span>
       <small>NetworkX</small>
@@ -628,9 +636,17 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#detect_unboundedness-class_method" title="NetworkX.detect_unboundedness (method)">detect_unboundedness</a></span>
+      <small>NetworkX</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="NetworkX.html#dfs_edges-class_method" title="NetworkX.dfs_edges (method)">dfs_edges</a></span>
       <small>NetworkX</small>
     </div>
   </li>
@@ -646,21 +662,13 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="NetworkX.html#dfs_edges-class_method" title="NetworkX.dfs_edges (method)">dfs_edges</a></span>
-      <small>NetworkX</small>
-    </div>
-  </li>
-  
-
-  <li class="odd ">
-    <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#dfs_postorder_nodes-instance_method" title="NetworkX::Graph#dfs_postorder_nodes (method)">#dfs_postorder_nodes</a></span>
       <small>NetworkX::Graph</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#dfs_predecessors-class_method" title="NetworkX.dfs_predecessors (method)">dfs_predecessors</a></span>
       <small>NetworkX</small>
@@ -668,7 +676,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#dfs_preorder_nodes-instance_method" title="NetworkX::Graph#dfs_preorder_nodes (method)">#dfs_preorder_nodes</a></span>
       <small>NetworkX::Graph</small>
@@ -676,7 +684,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#dfs_successors-class_method" title="NetworkX.dfs_successors (method)">dfs_successors</a></span>
       <small>NetworkX</small>
@@ -684,7 +692,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#dfs_tree-class_method" title="NetworkX.dfs_tree (method)">dfs_tree</a></span>
       <small>NetworkX</small>
@@ -692,7 +700,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#diameter-class_method" title="NetworkX.diameter (method)">diameter</a></span>
       <small>NetworkX</small>
@@ -700,7 +708,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#diamond_graph-class_method" title="NetworkX::Graph.diamond_graph (method)">diamond_graph</a></span>
       <small>NetworkX::Graph</small>
@@ -708,7 +716,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#difference-class_method" title="NetworkX.difference (method)">difference</a></span>
       <small>NetworkX</small>
@@ -716,7 +724,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#dijkstra_path-class_method" title="NetworkX.dijkstra_path (method)">dijkstra_path</a></span>
       <small>NetworkX</small>
@@ -724,7 +732,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#dijkstra_path_length-class_method" title="NetworkX.dijkstra_path_length (method)">dijkstra_path_length</a></span>
       <small>NetworkX</small>
@@ -732,7 +740,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#dijkstra_predecessor_distance-class_method" title="NetworkX.dijkstra_predecessor_distance (method)">dijkstra_predecessor_distance</a></span>
       <small>NetworkX</small>
@@ -740,7 +748,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#directed%3F-instance_method" title="NetworkX::Graph#directed? (method)">#directed?</a></span>
       <small>NetworkX::Graph</small>
@@ -748,7 +756,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#directed_edges_cross_edges-class_method" title="NetworkX.directed_edges_cross_edges (method)">directed_edges_cross_edges</a></span>
       <small>NetworkX</small>
@@ -756,7 +764,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#discharge-class_method" title="NetworkX.discharge (method)">discharge</a></span>
       <small>NetworkX</small>
@@ -764,7 +772,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#disjoint_union-class_method" title="NetworkX.disjoint_union (method)">disjoint_union</a></span>
       <small>NetworkX</small>
@@ -772,7 +780,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#disjoint_union_all-class_method" title="NetworkX.disjoint_union_all (method)">disjoint_union_all</a></span>
       <small>NetworkX</small>
@@ -780,7 +788,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#dist_path_lambda-class_method" title="NetworkX.dist_path_lambda (method)">dist_path_lambda</a></span>
       <small>NetworkX</small>
@@ -788,7 +796,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#dodecahedral_graph-class_method" title="NetworkX::Graph.dodecahedral_graph (method)">dodecahedral_graph</a></span>
       <small>NetworkX::Graph</small>
@@ -796,7 +804,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/UnionFind.html#each-instance_method" title="NetworkX::UnionFind#each (method)">#each</a></span>
       <small>NetworkX::UnionFind</small>
@@ -804,9 +812,17 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="NetworkX/Graph.html#each_bfs_edge-instance_method" title="NetworkX::Graph#each_bfs_edge (method)">#each_bfs_edge</a></span>
+      <small>NetworkX::Graph</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="NetworkX/Graph.html#each_bfs_node-instance_method" title="NetworkX::Graph#each_bfs_node (method)">#each_bfs_node</a></span>
       <small>NetworkX::Graph</small>
     </div>
   </li>
@@ -1168,6 +1184,22 @@
     <div class="item">
       <span class='object_link'><a href="NetworkX.html#grid_2d_graph-class_method" title="NetworkX.grid_2d_graph (method)">grid_2d_graph</a></span>
       <small>NetworkX</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="NetworkX/MultiGraph.html#has_edge%3F-instance_method" title="NetworkX::MultiGraph#has_edge? (method)">#has_edge?</a></span>
+      <small>NetworkX::MultiGraph</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="NetworkX/MultiDiGraph.html#has_edge%3F-instance_method" title="NetworkX::MultiDiGraph#has_edge? (method)">#has_edge?</a></span>
+      <small>NetworkX::MultiDiGraph</small>
     </div>
   </li>
   
